cmake_minimum_required (VERSION 3.0)
project ("CMakeTest")

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED On)
set(CMAKE_CXX_EXTENSIONS ON)
#find_package("OpenCV" 4.0.0 REQUIRED )
#message("OpenCV version: ${OpenCV_VERSION}")
#include_directories(${OpenCV_INCLUDE_DIRS})
#link_directories(${OpenCV_LIB_DIRS})
add_executable(try try.cpp)
#target_compile_features(try PRIVATE cxx_std_17)
#target_link_libraries(multhread pthread)
target_link_libraries(try pthread)
target_include_directories(try PRIVATE "~/opt/boost_1_81_0/")
target_compile_options(try PRIVATE -march=native)

